force-app/main/default/objects/Product_Forecast__c/Product_Forecast__c.object-meta.xml
<CustomObject>
    <label>Product Forecast</label>
    <nameField>
        <label>Product Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>