force-app/main/default/objects/Product_Forecast__c/fields/Actual_Quantity_KG__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity_KG__c</fullName>
    <label>Actual Quantity KG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>