force-app/main/default/objects/Product_Forecast__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Forecasts</relationshipLabel>
    <relationshipName>Product_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>