force-app/main/default/objects/Product_Forecast__c/fields/Forecast_Month__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Month__c</fullName>
    <label>Forecast Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forecast_Month</valueSetName>
    </valueSet>
</CustomField>