force-app/main/default/objects/Product_Forecast__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Not in Use</label>
    <referenceTo>Forecast_Period__c</referenceTo>
    <relationshipLabel>Product Forecasts</relationshipLabel>
    <relationshipName>Product_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>