force-app/main/default/objects/Product_Forecast__c/fields/Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quantity__c</fullName>
    <description>Forecast quantity entered by TSE/ASM on the monthly BRD flow, expressed in the selected Forecast UOM (KG or TON). Normalised to KG via Forecast_KG__c for actuals comparison.</description>
    <label>Forecast Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>