force-app/main/default/objects/Product_Forecast__c/fields/Forecast_UOM__c.field-meta.xml
<CustomField>
    <fullName>Forecast_UOM__c</fullName>
    <label>Forecast UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>TON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>