force-app/main/default/objects/Product_Forecast__c/fields/Forecast_Year__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Year__c</fullName>
    <label>Forecast Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forecast_Year</valueSetName>
    </valueSet>
</CustomField>