force-app/main/default/objects/Product_Forecast__c/fields/Is_Monthly_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Is_Monthly_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Monthly_Forecast</label>
    <type>Checkbox</type>
</CustomField>