force-app/main/default/objects/Product_Forecast__c/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <label>Product Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Sub_Group</valueSetName>
    </valueSet>
</CustomField>