force-app/main/default/objects/Product_Forecast__c/fields/Production_Email_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Production_Email_Sent_At__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production Email Sent At</label>
    <type>Checkbox</type>
</CustomField>