force-app/main/default/objects/Product_Forecast__c/validationRules/Quantity_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Monthly_Forecast__c, OR(ISBLANK(Forecast_Quantity__c), Forecast_Quantity__c &lt;= 0))</errorConditionFormula>
    <errorDisplayField>Forecast_Quantity__c</errorDisplayField>
    <errorMessage>Forecast Quantity must be greater than zero.</errorMessage>
</ValidationRule>